sample_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app.lbake.space
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=prod,Project=cognito
    external-dns.alpha.kubernetes.io/hostname: sample.lbake.space
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-scope: openid
    alb.ingress.kubernetes.io/auth-session-timeout: '3600'
    alb.ingress.kubernetes.io/auth-session-cookie: AWSELBAuthSessionCookie
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn": "arn:aws:cognito-idp:eu-central-1:522908934089:userpool/eu-central-1_ghlpJ2omF","UserPoolClientId":"14gokhmga7ldfvm4trgosp72oh","UserPoolDomain":".auth.eu-central-1.amazoncognito.com"}'
    alb.ingress.kubernetes.io/certificate-arn: 
    alb.ingress.kubernetes.io/target-type: 'ip'
spec:
  rules:
    - host: app.lbake.space
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
